--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,31 @@
   padding: 0;
 }
 
+body {
+  height: 100vh;
+  background: darkcyan;
+}
+body form {
+  display: flex;
+  justify-content: center;
+  background: #333;
+}
+body form input[type=number] {
+  width: 10%;
+}
+body form input,
+body form select {
+  background: rgba(0, 139, 139, 0.671);
+  padding: 10px;
+}
+
 #res {
+  margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
+  height: 90%;
 }
 
 .card {
@@ -15,12 +36,28 @@
   flex-direction: column-reverse;
   align-items: center;
   border: 1px solid black;
-  width: 15%;
-  height: 300px;
+  width: 300px;
+  height: 250px;
+  border-radius: 20px;
+  background: rgba(121, 120, 120, 0.712);
+}
+.card h1 {
+  font-size: 1.5rem;
 }
 .card img {
   width: 40%;
   border-radius: 20px;
+}
+.card p {
+  text-align: center;
+  font-size: 1rem;
+}
+
+@media screen and (max-width: 400px) {
+  form {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
